<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZendriveSDKDemo</string>

    <string name="location_permission">Location permission</string>
    <string name="location_permission_denied">Location Permission Denied</string>

    <string name="location_disabled">Location Disabled</string>
    <string name="enable_location">Enable High Accuracy location.</string>

    <string name="no_collision">Nothing happened</string>
    <string name="collision">Need help</string>

    <string name="invalid_sdk_key">Invalid Zendrive SDK key</string>
    <string name="default_sdk_key">Set Zendrive SDK key in Constants.java</string>

    <string name="invalid_maps_key">Invalid Google Maps APIkey</string>
    <string name="default_maps_key">Set Google Maps API in AndroidManifest.xml</string>

    <string name="start_drive">Start Drive</string>
    <string name="end_drive">End Drive</string>
    <string name="login_zendrive_sdk">Login</string>
    <string name="onboarding_login_zendrive_sdk">I have done it</string>
    <string name="navigate_to_settings">Go to App Settings</string>
    <string name="trigger_collision">Trigger Collision</string>
    <string name="driving_title">Driving</string>
    <string name="zendrive_setup_success">Ready to drive</string>
    <string name="zendrive_setup_failure">Zendrive SDK setup failed</string>
    <string name="zendrive_not_setup">Zendrive SDK not setup</string>

    <string name="setting_button">Settings</string>
    <string name="logout_button">Logout</string>

    <string name="auto_on">AUTO_ON</string>
    <string name="auto_off">AUTO_OFF</string>
    <string name="drive_tracking_key">drive_tracking</string>
    <string name="user_type_key">user_type_key</string>
    <string name="vehicle_type_key">vehicle_type_key</string>
    <string name="zendrive_sdk_version_key">zendrive_sdk_version_key</string>
    <string name="bulleted_onboarding_list_huawei">You are on a Huawei device. Some device settings
        interfere with the functioning of the SDK. Please fix them according to the instructions below \n\n
        <li> - Turn off manage automatically option for app</li>\n
        <li> - Set Auto-Launch to true in manual mode</li>\n
        <li> - Set Secondary Launch to true in manual mode</li>\n
        <li> - Set run in background to true in manual mode</li>\n
    </string>
    <string name="bulleted_onboarding_list_huawei_11">You are on a Huawei device. Some device settings
        interfere with the functioning of the SDK. Please fix them according to the instructions below \n\n
        <li> - Click on the battery icon</li>\n
        <li> - Choose the App launch option</li>\n
        <li> - Turn off manage automatically option for app</li>\n
        <li> - Set Auto-Launch to true in manual mode</li>\n
        <li> - Set Secondary Launch to true in manual mode</li>\n
        <li> - Set run in background to true in manual mode</li>\n
    </string>
    <string name="bulleted_onboarding_list_huawei_harmony">You are on a Huawei device. Some device settings
        interfere with the functioning of the SDK. Please fix them according to the instructions below \n\n
        <li> - Choose the App launch option</li>\n
        <li> - Turn off manage automatically option for app</li>\n
        <li> - Set Auto-Launch to true in manual mode</li>\n
        <li> - Set Secondary Launch to true in manual mode</li>\n
        <li> - Set run in background to true in manual mode</li>\n
    </string>

    <string name="bulleted_onboarding_list_xiaomi">You are on a Mi device. Some device settings
        interfere with the functioning of the SDK. Please fix them according to the instructions below \n\n
        <li> - Enable AutoStart for app</li>\n
        <li> - Set Battery Saver setting to No restrictons</li>\n
        <li> - Allow permission for Show on Lock screen</li>\n
        <li> - Allow permission for Start in background</li>\n
        <li> - Allow permission for display pop-up window</li>\n
    </string>

    <string-array name="list_preference_entry_values">
        <item>Free</item>
        <item>Paid</item>
    </string-array>

    <string name="collision_detected">Collision Detected</string>

    <string name="associate_vehicles">Associate Vehicles</string>
    <string name="nearby_beacons">Nearby Beacons</string>
    <string name="register_bluetooth_stereo">Register Bluetooth Stereo</string>

</resources>
