<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".SplashActivity">
    <item android:title="@string/setting_button" android:icon="@android:drawable/btn_minus"
        app:showAsAction="never" android:id="@+id/settings"
        />
    <item android:title="@string/logout_button" android:icon="@android:drawable/btn_minus"
          app:showAsAction="never" android:id="@+id/logout"
        />
    <item android:title="@string/associate_vehicles" android:icon="@android:drawable/btn_minus"
        app:showAsAction="never" android:id="@+id/vehicle"
        />
    <item android:title="@string/nearby_beacons" android:icon="@android:drawable/btn_minus"
        app:showAsAction="never" android:id="@+id/beacons"
        />
</menu>
